<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".view.DetallesActivity">

    <ImageView
        android:id="@+id/iv_poster_peli"
        android:layout_width="0dp"
        android:layout_height="233dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/noposterp" />

    <ImageButton
        android:id="@+id/btn_estrella"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_estrella_vacia"
        android:contentDescription="@string/tv_estrella_content_description_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/alice"
        android:text="@string/tv_movie_title"
        android:textAlignment="center"
        android:textColor="@color/cornell_red"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_poster_peli" />

    <TextView
        android:id="@+id/tv_original_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/alice"
        android:text="@string/tv_original_title_text"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />

    <TextView
        android:id="@+id/tv_original_title_display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/alice"
        android:text="@string/tv_original_title_display_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_original_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_original_text" />

    <TextView
        android:id="@+id/tv_sinopsis_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/alice"
        android:text="@string/tv_sinopsis_title_text"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_original_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_original_title_display" />

    <TextView
        android:id="@+id/tv_sinopsis_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/recuadro_borde"
        android:fontFamily="@font/alice"
        android:padding="12dp"
        android:text="@string/tv_sinopsis_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sinopsis_title" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/tv_sinopsis_text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tv_sinopsis_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_sinopsis_text">

        <TextView
            android:id="@+id/tv_estreno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/alice"
            android:text="@string/tv_estreno_text"
            android:textColor="@color/cornell_red"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_fecha_estreno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/tv_relase_date_text"
            android:textColor="@color/cornell_red"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/tv_valoracion_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/alice"
            android:text="@string/tv_valoracion_text"
            android:textColor="@color/gray"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_valoracion_publico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/tv_valoracioon_text"
            android:textColor="@color/gray"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>